<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthAssociation">




    <TextView
        android:id="@+id/msgError"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/erreurAuth"
        android:textColor="#FD0000" />


    <EditText
        android:id="@+id/sName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/custom_person_ic"
        android:background="@drawable/custom_input"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/sPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/custom_lock_ic"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        />


    <CheckBox
        android:id="@+id/ch_rememberme"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        android:text="@string/saveUser" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnLog"
        android:layout_marginTop="10dp"



        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autoLink="all"
        android:text="@string/forgotpass" />




</LinearLayout>